[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/elements/label/PixelLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/world/hover_text/WorldHoverText.gd" type="Script" id=2]
[ext_resource path="res://assets/font/pixelsix00.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[node name="WorldHoverText" instance=ExtResource( 1 )]
margin_right = 16.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
script = ExtResource( 2 )

[node name="LifeTimer" type="Timer" parent="." index="0"]
wait_time = 0.75
one_shot = true

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
